update(i18n) add values

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -16,9 +16,10 @@ pt:
   field:
     title:       "Titulo do Projeto"
     description: "Descrição do Projeto"
+    save:        "Criar"
   controller:
-    board: "Boards"
-    list:  "Listas"
+    board: "Projeto"
+    list:  "Lista"
     card:  "Card"
   messages:
     project:
