update(i18n) alter values

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -25,14 +25,14 @@ pt:
   messages:
     project:
       index: "Projetos disponiveis"
-      add:   "Criar novo projeto"
+      add:   "Criar novo %{value}"
     success:
       create: "O %{value} foi criado com sucesso"
       update: "O %{value} foi atualizado com sucesso"
       remove: "O %{value} foi removido com sucesso"
     error:
-      create: "O %{value} não foi criado com sucesso"
-      update: "O %{value} não foi atualizado com sucesso"
-      remove: "O %{value} não foi removido com sucesso"
+      create: "O %{value} não foi criado"
+      update: "O %{value} não foi atualizado"
+      remove: "O %{value} não foi removido"
     alert:
       remove: "Tem certeza que quer deletar o %{value} ?"
