update(i18n) update values

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -14,8 +14,8 @@ pt:
   project:
     title: "Free Do"
   field:
-    title:       "Titulo do Projeto"
-    description: "Descrição do Projeto"
+    title:       "Titulo do %{value}"
+    description: "Descrição do %{value}"
     save:        "Salvar"
     del:         "Deletar"
   controller:
